--- a/app-mmf/package.json
+++ b/app-mmf/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "rxjs": "~7.8.0",
